--- a/SBE.tex
+++ b/SBE.tex
@@ -47,7 +47,7 @@
 %=================================================================
 \begin{document}
 %=================================================================
-\includepdf[noautoscale]{figures/cover-edition-53.pdf} 
+%\includepdf[noautoscale]{figures/cover-edition-53.pdf} 
 \frontmatter
 %=================================================================
 \setcounter{page}{1}
@@ -110,7 +110,8 @@ ISBN 978-3-9523341-0-2 (First Edition)\\
 
 5.3 Edition, December 2020.\\
 Published by Software Architecture Group, Hasso Plattner Institute, Germany. \hpiswa\\
-ISBN TBD (5.3 Edition)\\
+Imprint: Lulu.com\\
+ISBN 978-1-716-26297-5 (5.3 Edition)\\
 
 Figures flattened \today.
 \end{footnotesize}
